// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ComposeEmitter > snapshot: card + heading + button 1`] = `
"// AppStyles.kt — Generated by dot codegen
// Do not edit manually. Regenerate with: dot-codegen --target compose

package com.hualabs.dot.generated

import androidx.compose.foundation.background
import androidx.compose.foundation.border
import androidx.compose.foundation.layout.*
import androidx.compose.foundation.shape.CircleShape
import androidx.compose.foundation.shape.RoundedCornerShape
import androidx.compose.runtime.Composable
import androidx.compose.ui.Modifier
import androidx.compose.ui.draw.alpha
import androidx.compose.ui.draw.clip
import androidx.compose.ui.draw.rotate
import androidx.compose.ui.draw.scale
import androidx.compose.ui.draw.shadow
import androidx.compose.ui.graphics.Color
import androidx.compose.ui.graphics.RectangleShape
import androidx.compose.ui.unit.dp
import androidx.compose.ui.unit.sp
import androidx.compose.ui.zIndex

/** Color palette generated from dot utility styles */
object DotColors {
    val dotffffff = Color(0xFFffffff)
    val dot000000 = Color(0xFF000000)
    val dot121418 = Color(0xFF121418)
    val dot2b6cd6 = Color(0xFF2b6cd6)
}

/** Style modifiers generated from dot utility strings */
object AppStyles {
    /** dot: "p-4 bg-white rounded-lg shadow-md" */
    fun Modifier.dotCardBase(): Modifier = this
        .padding(16.dp)
        .background(Color(0xFFffffff), RoundedCornerShape(8.dp))
        .shadow(elevation = 3.dp, shape = RoundedCornerShape(0.dp), ambientColor = Color(0xFF000000).copy(alpha = 0.1f), spotColor = Color(0xFF000000).copy(alpha = 0.1f))

    /** dot: "text-2xl font-bold text-gray-900" */
    fun Modifier.dotHeading(): Modifier = this

    /** dot: "px-6 py-3 bg-primary-500 text-white rounded-full font-semibold" */
    fun Modifier.dotPrimaryButton(): Modifier = this
        .padding(top = 12.dp, bottom = 12.dp, start = 24.dp, end = 24.dp)
        .background(Color(0xFF2b6cd6), CircleShape)
}
"
`;

exports[`ComposeEmitter > snapshot: layout utilities 1`] = `
"// LayoutStyles.kt — Generated by dot codegen
// Do not edit manually. Regenerate with: dot-codegen --target compose

package com.hualabs.dot.generated

import androidx.compose.foundation.background
import androidx.compose.foundation.border
import androidx.compose.foundation.layout.*
import androidx.compose.foundation.shape.CircleShape
import androidx.compose.foundation.shape.RoundedCornerShape
import androidx.compose.runtime.Composable
import androidx.compose.ui.Modifier
import androidx.compose.ui.draw.alpha
import androidx.compose.ui.draw.clip
import androidx.compose.ui.draw.rotate
import androidx.compose.ui.draw.scale
import androidx.compose.ui.draw.shadow
import androidx.compose.ui.graphics.Color
import androidx.compose.ui.graphics.RectangleShape
import androidx.compose.ui.unit.dp
import androidx.compose.ui.unit.sp
import androidx.compose.ui.zIndex

/** Style modifiers generated from dot utility strings */
object LayoutStyles {
    /** dot: "w-full" */
    fun Modifier.dotFullWidth(): Modifier = this
        .fillMaxWidth()

    /** dot: "w-64 h-32" */
    fun Modifier.dotFixedBox(): Modifier = this
        .size(width = 256.dp, height = 128.dp)

    /** dot: "rotate-45 scale-110 opacity-80" */
    fun Modifier.dotRotatedCard(): Modifier = this
        .alpha(0.8f)
        .rotate(45f)
        .scale(1.1f)
}
"
`;
